--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -44,7 +44,14 @@
 				{
 					"id": -1,
 					"name": "playDice",
-					"pathName": "pages/playDice/playDice"
+					"pathName": "pages/playDice/playDice",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "index",
+					"pathName": "pages/index/index",
+					"query": "code='000b'"
 				}
 			]
 		}
